--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/form.css" media="all">
+	<link rel="prefetch" href="pricing.html" />
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<script type="text/javascript" src="js/PIE.js"></script>
