more form fixups

--- a/pricing.html
+++ b/pricing.html
@@ -42,15 +42,15 @@
 				<div class="alignright">
 					<nav>
 						<ul>
-							<li><a href="index.html">HOME</a></li>
-							<li class="active"><a href="pricing.html">PRICING</a></li>
+							<li><a href="/">HOME</a></li>
+							<li class="active"><a href="/pricing/">PRICING</a></li>
 							<li><a href="#calc">CALCULATOR</a></li>
 							<li><a href="#popup-contact" class="fancybox">CONTACT</a></li>
 						</ul>
 					</nav>
 					<a href="#popup-contact" class="fancybox"><strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong></a>
 				</div>
-				<strong class="logo"><a href="index.html">MaxCDN Enterprise</a></strong>
+				<strong class="logo"><a href="/">MaxCDN Enterprise</a></strong>
 			</div>
 		</header><!-- /header -->
 		<div class="price-block">
@@ -120,8 +120,8 @@
 				<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
 				<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
 				<input type="hidden" name="formid" value="15" />
-				<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success.html" />
-				<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success.html" />
+				<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
+				<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
 				<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 
 				<h2 class="orange">Meet Ameer</h2>
@@ -205,8 +205,8 @@
 						<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
 						<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
 						<input type="hidden" name="formid" value="15" />
-						<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success.html" />
-						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success.html" />
+						<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
+						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 
 						<h3 class="heading">Shall we make this official?</h3>
@@ -256,8 +256,8 @@
 						<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
 						<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
 						<input type="hidden" name="formid" value="15" />
-						<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success.html" />
-						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success.html" />
+						<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
+						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 
 						<label>First Name</label>
@@ -406,7 +406,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we’ll give you a call to set up your free seven day enterprise trial. Try us out. See how fast we are for yourself. Give us a support call — you’ll have access to priority support. We’re sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below, we’ll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you’ll have access to priority support. We’re sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
@@ -420,8 +420,8 @@
 				<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
 				<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
 				<input type="hidden" name="formid" value="15" />
-				<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success.html" />
-				<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success.html" />
+				<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
+				<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
 				<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 
 				<div class="cols">
