--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th>Starting at $800/mth</th>
+							<th>Starting at $800/mth*</th>
 							<th>United States</th>
 							<th>Europe</th>
 							<th>Asia</th>
@@ -378,8 +378,9 @@
 						</tr>
 					</tbody>
 				</table>
+				<section class="content small">* Setup fee may apply.</section>
 				<span class="decor-r ie-fix"></span><span class="decor-b ie-fix"></span>
-			</div><!-- /data -->
+			</div><br><!-- /data -->
 			<h2 class="heading">No HTTP Request Charges. Ever.</h2>
 			<p>While it’s easy to charge for requests, we’re a content delivery network, not a request delivery network. We won’t charge for requests, ever. I bet you thought you were going to have to read a bunch of qualifiers here, didn’t you?</p>
 			<div class="img-block"><img src="images/img-34.png" alt="image description" width="629" height="234" ></div>
