--- a/pricing.html
+++ b/pricing.html
@@ -59,7 +59,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th>Starting at $800/mth</th>
+							<th>Starting at $800/mth*</th>
 							<th>United States</th>
 							<th>Europe</th>
 							<th>Asia</th>
@@ -101,7 +101,8 @@
 				<span class="decor-r ie-fix"></span><span class="decor-b ie-fix"></span>
 			</div><!-- /data -->
 		</div><!-- /price-block -->
-	</div><!-- /top-area -->
+	</div><!-- /top-area -->				
+	<section class="info small">* Setup fee may apply.</section><br>
 	<article class="info">
 		<h2 class="heading">600 peering partners in 90 countries</h2>
 		<p>POPs in North America, Europe and Asia. Six hundred peering partners in 90 countries,<br/>including AT&T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers,<br/>among many others, as well as redundant backbones with GTT and Zayo.<br/>SSD-equipped servers with multiple 10 Gigabit connections.</p>
