--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>MaxCDN Enterprise</title>
+	<title>Global Flat Rate Pricing by MaxCDN. Prices from 5¢ globally.</title>
+	<meta name="description" content="Simple enterprise pricing. Don't pay different prices for different regions. Pay one  global flat rate for the entire world. And still get enterprise reliability and performance."/>
 	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/form.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
