--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>MaxCDN Enterprise</title>
+	<title>Enterprise CDN - Performance and reliability at a third of the cost | MaxCDN</title>
+	<meta name="description" content="An enterprise content delivery network with high reliability and performance without the cost. Features not provided by other CDNs. See why we're different."/>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/form.css" media="all">
