--- a/success.html
+++ b/success.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>MaxCDN Enterprise - Thank You!</title>
+	<meta name="robots" content="noindex,nofollow" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/form.css" media="all">
