--- a/pricing.html
+++ b/pricing.html
@@ -211,7 +211,8 @@
 						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 
-						<h3 class="heading">Shall we make this official?</h3>
+						<h3 class="heading">If you’re ready, we’re ready for you.</h3>
+						<p>Have a question? We have an answer.</p>
 						<div class="container">
 							<div class="col">
 								<label>First Name</label>
