linked up social buttons

--- a/pricing.html
+++ b/pricing.html
@@ -398,9 +398,9 @@
 					<strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong>
 					<span class="str orange">Supercharge your site</span>
 					<ul class="socials">
-						<li><a href="#" class="ico">twitter</a></li>
-						<li><a href="#" class="ico ico-2">facebook</a></li>
-						<li><a href="#" class="ico ico-3">google+</a></li>
+						<li><a href="https://twitter.com/maxcdn" target="_blank" class="ico">twitter</a></li>
+						<li><a href="https://www.facebook.com/MaxCDN" target="_blank" class="ico ico-2">facebook</a></li>
+						<li><a href="https://plus.google.com/105665919150587532072/" target="_blank" class="ico ico-3">
 					</ul>
 				</div>
 			</div>
