--- a/pricing.html
+++ b/pricing.html
@@ -210,6 +210,14 @@
 						<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
 						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
+						<select type='hidden' id="bandwidth-pricing-hidden" name="NetDNA_Usage_Selection__c" tabindex="6">
+							<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
+							<option data-range="0-4" value="Under 5TB">Under 5TB</option>
+							<option data-range="5-10" value="5TB - 10TB">5TB - 10TB</option>
+							<option data-range="11-100" value="11 - 100TB">11 - 100TB</option>
+							<option data-range="101-1023" value="101TB - 1,000TB">101TB - 1,000TB</option>
+							<option data-range="1024-infin" value="1PB+">1PB+</option>
+						</select>
 
 						<h3 class="heading">Shall we make this official?</h3>
 						<div class="container">
