--- a/pricing.html
+++ b/pricing.html
@@ -207,11 +207,11 @@
 						<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
 						<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
 						<input type="hidden" name="formid" value="15" />
-						<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
-						<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
+						<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
+						<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 						<select type='hidden' id="bandwidth-pricing-hidden" name="NetDNA_Usage_Selection__c" tabindex="6">
-							<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
+							<option data-range="none" value="Select Bandwidth" selected="selected">Select Bandwidth</option>
 							<option data-range="0-4" value="Under 5TB">Under 5TB</option>
 							<option data-range="5-10" value="5TB - 10TB">5TB - 10TB</option>
 							<option data-range="11-100" value="11 - 100TB">11 - 100TB</option>
