--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 			</form>
 		</div><!-- /popup -->
 	</div>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="js/jquery.plugins.min.js"></script>
 	<script type="text/javascript" src="js/custom-form.js"></script>
     <script type="text/javascript" src="js/custom-form.select.js"></script>
