fixing https and moving subpages to folders

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/form.css" media="all">
 	<link rel="prefetch" href="https://enterprise.maxcdn.com/pricing/" />
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<script type="text/javascript" src="js/PIE.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/ie.css" media="all">
 	<![endif]-->
@@ -205,9 +205,9 @@
 				</ul>
 				<div class="tab-content" id="tab-1-1">
 					<div class="img">
-						<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false"></script>
-						<script type="text/javascript" src="http://cdn-assets.netdna.com/maps/google-maps-marker.js"></script>
-						<script type="text/javascript" src="http://cdn-assets.netdna.com/maps/maps.js"></script>
+						<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false"></script>
+						<script type="text/javascript" src="https://cdn-assets.netdna.com/maps/google-maps-marker.js"></script>
+						<script type="text/javascript" src="https://cdn-assets.netdna.com/maps/maps.js"></script>
 						<div id="map_canvas" style="width: 100%; height: 242px;"></div> 
 						<div class="image datacenter-partners"></div>
 						<script type="text/javascript">
@@ -485,8 +485,8 @@
 				<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
 				<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
 				<input type="hidden" name="formid" value="15" />
-				<input type="hidden" name="returnURL" value="http://enterprise.maxcdn.com/success/" />
-				<input type="hidden" name="retURL" value="http://enterprise.maxcdn.com/success/" />
+				<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
+				<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
 				<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
 
 				<div class="cols">
