fixing google links

--- a/success/index.html
+++ b/success/index.html
@@ -160,7 +160,7 @@
 					<ul class="socials">
 						<li><a href="https://twitter.com/maxcdn" target="_blank" class="ico">twitter</a></li>
 						<li><a href="https://www.facebook.com/MaxCDN" target="_blank" class="ico ico-2">facebook</a></li>
-						<li><a href="https://plus.google.com/105665919150587532072/" target="_blank" class="ico ico-3">
+						<li><a href="https://plus.google.com/105665919150587532072/" target="_blank" class="ico ico-3"></a></li>
 					</ul>
 				</div>
 			</div>
