--- a/pricing/index.html
+++ b/pricing/index.html
@@ -497,5 +497,15 @@
 	  });
 	  return SnapABug.startLink();
 	}</script>
+
+	<script type="text/javascript">
+	var _mfq = _mfq || [];
+	(function() {
+		var mf = document.createElement("script"); mf.type = "text/javascript"; mf.async = true;
+		mf.src = "//cdn.mouseflow.com/projects/0871b593-6288-4f18-a9b1-88d1d6802d1e.js";
+		document.getElementsByTagName("head")[0].appendChild(mf);
+	})();
+	</script>
+
 </body>
 </html>
