editing header speed form copy

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 						</div>
 					</div>
 					<div class="state-3" style="display:none;">
-						<strong class="ttl">Your report is being created!</strong>
-						<p>It'll be emailed to you as soon as possible.</p>
+						<strong class="ttl">Your results are on the way!</strong>
+						<p>Give us between 36 to 48 hours to put together a sample for your report. It will be emailed to you as soon as possible.</p>
 					</div>
 				</div>
 			</div>
