--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
 
 						<h3 class="orange">TEST OUR PERFORMANCE</h3>
-						<p>Need convincing? We’ll make you a believer. Give us a file from your server or current CDN. We’ll run a Catchpoint test and send you the results, ASAP!</p>
+						<p>Need convincing? We'll make you a believer. Give us a file from your server or current CDN. We'll run a Catchpoint test and send you the results, ASAP!</p>
 						<div class="group">
 							<label>URL of a FILE <span>(must be under 2MB):</span></label>
 							<input class="text required" type="text" name="Website" value="http://" data-value="http://">
@@ -196,7 +196,7 @@
 			<div class="perfomance-info" id="performance">
 				<h2 class="orange large-heading">Performance</h2>
 				<p>Our servers feature Nginx — known for its high performance, stability, rich feature set, simple configuration, and low resource consumption — and 100% SSDs in North America, Europe and Asia, connected to the internet with multiple 10 Gigabit ports.</p>
-				<p>Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis — but don’t take our word for it. Use your own tools to test our speed. We know you’ll be pleasantly surprised.</p>
+				<p>Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis — but don't take our word for it. Use your own tools to test our speed. We know you'll be pleasantly surprised.</p>
 			</div><!-- /perfomance-info -->
 			<div class="tab-area" id="tabs-1">
 				<ul class="tabset">
@@ -258,12 +258,12 @@
 				<div class="slide slide-current">
 					<div class="img"><img src="images/img-28.png" alt="image description"></div>
 					<strong class="name">Instant Purge</strong>
-					<p>Traditional CDNs find it acceptable to purge your cache in half an hour— we don’t. Your cache will be purged in 30 seconds or less with us.</p>
+					<p>Traditional CDNs find it acceptable to purge your cache in half an hour— we don't. Your cache will be purged in 30 seconds or less with us.</p>
 				</div>
 				<div class="slide slide-next">
 					<div class="img"><img src="images/img-29.png" alt="image description" ></div>
 					<strong class="name">Instant Provisioning</strong>
-					<p>If you’re waiting half an hour — or more — to provision your zone, talk to us. We’ll have you up and running in minutes.</p>
+					<p>If you're waiting half an hour — or more — to provision your zone, talk to us. We'll have you up and running in minutes.</p>
 				</div>
 				<div class="slide" style="display:none;">
 					<div class="img"><img src="images/img-30.png" alt="image description" ></div>
@@ -283,11 +283,11 @@
 	<div class="main">
 		<article class="content">
 			<blockquote class="testimonial-block" id="security">
-				<q>“Security Is Not a Product; It's a Process.”</q>
+				<q>"Security Is Not a Product; It's a Process."</q>
 				<cite><strong>Bruce Schneie</strong> | Cryptographer</cite>
 			</blockquote>
 			<h2 class="orange large-heading">Security</h2>
-			<p>Being able to secure your website is as important as its design and content. Having a fast website doesn’t mean you should compromise your security.  We make sure that your website’s fast, but that it’s also secure using industry-leading encryption standards.</p>
+			<p>Being able to secure your website is as important as its design and content. Having a fast website doesn't mean you should compromise your security.  We make sure that your website's fast, but that it's also secure using industry-leading encryption standards.</p>
 			<ul class="option-list">
 				<li>
 					<span class="ico">&nbsp;</span>
@@ -297,7 +297,7 @@
 				<li>
 					<span class="ico ico-2">&nbsp;</span>
 					<strong class="name">Two Step Authorization</strong>
-					<p>Protect your users with passwords, as well as a random code that changes every minute that’s tied to their smartphones using Google Authenticator, available for all major smartphone platforms.</p>
+					<p>Protect your users with passwords, as well as a random code that changes every minute that's tied to their smartphones using Google Authenticator, available for all major smartphone platforms.</p>
 				</li>
 				<li>
 					<span class="ico ico-3">&nbsp;</span>
@@ -323,11 +323,11 @@
 			<article class="content" id="support">
 				<strong class="large-heading orange">Support</strong>
 				<h2 class="heading">Engineer Access</h2>
-				<p>We’re sure the tech support you and your team needs is something beyond rebooting your laptop or turning it off and on. You’ll have access to one of our engineers — not a level one rep reading from a script — who’ll work with you to ensure your service works flawlessly with our CDN.</p>
+				<p>We're sure the tech support you and your team needs is something beyond rebooting your laptop or turning it off and on. You'll have access to one of our engineers — not a level one rep reading from a script — who'll work with you to ensure your service works flawlessly with our CDN.</p>
 				<h2 class="heading">Dedicated Account Rep</h2>
-				<p>Never play phone tag again with a faceless, anonymous billing or accounts department. You’ll be serviced by a single representative who knows your account and who will give you the personal service you deserve. You’ll have access to them via their mobile number, Skype and GTalk.</p>
+				<p>Never play phone tag again with a faceless, anonymous billing or accounts department. You'll be serviced by a single representative who knows your account and who will give you the personal service you deserve. You'll have access to them via their mobile number, Skype and GTalk.</p>
 				<h2 class="heading">24/7 Support</h2>
-				<p>As an enterprise client, we include 24/7/365 priority support. You’ll have direct access to our NOC at any time. An emergency email address and phone number will be provided and will always be monitored. That includes Thanksgiving, Christmas, New Year’s Eve, New Year’s, The Fourth of July…no fine print, no asterisks.</p>
+				<p>As an enterprise client, we include 24/7/365 priority support. You'll have direct access to our NOC at any time. An emergency email address and phone number will be provided and will always be monitored. That includes Thanksgiving, Christmas, New Year's Eve, New Year's, The Fourth of July...no fine print, no asterisks.</p>
 			</article>
 		</div>
 	</div><!-- /support-info -->
@@ -382,7 +382,7 @@
 				<span class="decor-r ie-fix"></span><span class="decor-b ie-fix"></span>
 			</div><br><!-- /data -->
 			<h2 class="heading">No HTTP Request Charges. Ever.</h2>
-			<p>While it’s easy to charge for requests, we’re a content delivery network, not a request delivery network. We won’t charge for requests, ever. I bet you thought you were going to have to read a bunch of qualifiers here, didn’t you?</p>
+			<p>While it's easy to charge for requests, we're a content delivery network, not a request delivery network. We won't charge for requests, ever. I bet you thought you were going to have to read a bunch of qualifiers here, didn't you?</p>
 			<div class="img-block"><img src="images/img-34.png" alt="image description" width="629" height="234" ></div>
 		</article>
 	</div><!-- /main -->
@@ -471,7 +471,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we’ll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you’ll have access to priority support. We’re sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
@@ -514,13 +514,13 @@
 						</div>
 					</div>
 					<div class="col">
-						<h3>If we’re a fit, you’ll enjoy:</h3>
+						<h3>If we're a fit, you'll enjoy:</h3>
 						<ul class="simple-list">
 							<li>Competitive global rates</li>
 							<li>Fast network, fast provisioning</li>
 							<li>Easy to use, but powerful, control panel and API</li>
 							<li>39ms average response times, according to Cedexis</li>
-							<li>24/7/365 support, even on holidays (yes, even that holiday you’re thinking about now)</li>
+							<li>24/7/365 support, even on holidays (yes, even that holiday you're thinking about now)</li>
 						</ul>
 					</div>
 				</div>
