--- a/pricing/index.html
+++ b/pricing/index.html
@@ -107,7 +107,7 @@
 	<article class="info">
 		<h2 class="heading">600 peering partners in 90 countries</h2>
 		<p>POPs in North America, Europe and Asia. Six hundred peering partners in 90 countries,<br/>including AT&T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers,<br/>among many others, as well as redundant backbones with GTT and Zayo.<br/>SSD-equipped servers with multiple 10 Gigabit connections.</p>
-		<p>Our price? Just one, no matter where in the world. We charge based on bandwidth. We don’t charge for requests. We also don't charge additional fees for SSL traffic.</p>
+		<p>Our price? Just one, no matter where in the world. We charge based on bandwidth. We don't charge for requests. We also don't charge additional fees for SSL traffic.</p>
 		<div class="ask-form">
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
@@ -127,7 +127,7 @@
 				<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/pricing/" />
 
 				<h2 class="orange">Meet Ameer</h2>
-				<label>Ameer is a senior account executive at MaxCDN. He’ll help you find out if MaxCDN Enterprise is a good fit for your company.</label>
+				<label>Ameer is a senior account executive at MaxCDN. He'll help you find out if MaxCDN Enterprise is a good fit for your company.</label>
 				<input class="required" type="email" name="Email" placeholder="Your E-mail" />
 				<div class="clearfix"></div>
 				<div class="textarea"><textarea class="required"  name="Contact_Form_Message__c" cols="30" rows="10" style="resize:none;" placeholder="Your Message"></textarea></div>
@@ -143,7 +143,7 @@
 		<div class="holder">
 			<div class="heading-block">
 				<h2 class="orange large-heading">How Much for How Much?</h2>
-				<p>Between our fast connectivity and blazing servers, 24/7/365 priority support, fully documented and supported REST API and powerful — but easy to use — control panel, there’s a lot to like at MaxCDN. We’re also sure you’ll be pleasantly surprised with our competitive pricing.</p>
+				<p>Between our fast connectivity and blazing servers, 24/7/365 priority support, fully documented and supported REST API and powerful — but easy to use — control panel, there's a lot to like at MaxCDN. We're also sure you'll be pleasantly surprised with our competitive pricing.</p>
 			</div>
 			<div class="price-form">
 				<form action="#">
@@ -219,7 +219,7 @@
 							<option data-range="1024-infin" value="1PB+">1PB+</option>
 						</select>
 
-						<h3 class="heading">If you’re ready, we’re ready for you.</h3>
+						<h3 class="heading">If you're ready, we're ready for you.</h3>
 						<p>Have a question? We have an answer.</p>
 						<div class="container">
 							<div class="col">
@@ -249,7 +249,7 @@
 		<div class="heading-block">
 			<strong class="orange large-heading">Free Trial</strong>
 			<h2 class="heading">Seven Days, No Commitment. Pinkie Swear.</h2>
-			<p>You’ve worked with other CDNs, but do their mediocre support, slow purging and high rates get to you? Try us out for a week — seven full days, 168 hours… you get the point. Test our response times with your own performance service or software. See for yourself how our control panel and REST API is easy to use and powerful. Once you try us out, you’ll see why MaxCDN Enterprise is the best choice.</p>
+			<p>You've worked with other CDNs, but do their mediocre support, slow purging and high rates get to you? Try us out for a week — seven full days, 168 hours... you get the point. Test our response times with your own performance service or software. See for yourself how our control panel and REST API is easy to use and powerful. Once you try us out, you'll see why MaxCDN Enterprise is the best choice.</p>
 		</div>
 		<div class="cols">
 			<div class="col">
@@ -311,23 +311,23 @@
 			<div class="heading-block">
 				<strong class="large-heading orange">FAQs</strong>
 				<h2 class="heading">More Questions? No Problem.</h2>
-				<p>We believe in openness, honesty and transparency. Don’t see your question answered here? Drop us a line.</p>
+				<p>We believe in openness, honesty and transparency. Don't see your question answered here? Drop us a line.</p>
 			</div>
 			<div class="cols">
 				<div class="col">
 					<dl class="faq-list">
-						<dt>When you say 24/7/365 support, do you mean Thanksgiving, Christmas, New Year’s Eve, New Years and the 4th of July?</dt>
-						<dd>Yes. There’s no asterisks and no fine print when it comes to our support. Your online business is your livelihood and when you have an issue, we’re there. You’ll have direct contact to your priority support team and account representatives who will be ready to answer your questions and give your personalized service. We continually monitor our lines of communication, even during major holidays, just in case you need our teams.</dd>
-						<dt>When you say "engineer," do you mean it’s an outsourced tech support person reading from a script?</dt>
-						<dd>No. You’ll talk to an engineer based out of our Los Angeles office. They’ll give you the best personalized advice for any potential issues that may arise. Our CDN is powered by our API and our control panel. Both our kept up to date with updated documentation and our engineers know how best utilize our resources. Feel free to contact them at any time for any of your support questions.</dd>
+						<dt>When you say 24/7/365 support, do you mean Thanksgiving, Christmas, New Year's Eve, New Years and the 4th of July?</dt>
+						<dd>Yes. There's no asterisks and no fine print when it comes to our support. Your online business is your livelihood and when you have an issue, we're there. You'll have direct contact to your priority support team and account representatives who will be ready to answer your questions and give your personalized service. We continually monitor our lines of communication, even during major holidays, just in case you need our teams.</dd>
+						<dt>When you say "engineer," do you mean it's an outsourced tech support person reading from a script?</dt>
+						<dd>No. You'll talk to an engineer based out of our Los Angeles office. They'll give you the best personalized advice for any potential issues that may arise. Our CDN is powered by our API and our control panel. Both our kept up to date with updated documentation and our engineers know how best utilize our resources. Feel free to contact them at any time for any of your support questions.</dd>
 					</dl>
 				</div>
 				<div class="col">
 					<dl class="faq-list">
-						<dt>I’m not sure if I qualify as an "enterprise" customer. Can I talk to someone about my needs?</dt>
-						<dd>Of course. Contact us at 1-877-629-236, in the US, or +1-323-313-1206 internationally to speak to an account executive. Or email and chat with us through this link (link to contact page). We’ll work with you to make sure you get the best price and service for your specific needs.</dd>
+						<dt>I'm not sure if I qualify as an "enterprise" customer. Can I talk to someone about my needs?</dt>
+						<dd>Of course. Contact us at 1-877-629-236, in the US, or +1-323-313-1206 internationally to speak to an account executive. Or email and chat with us through this link (link to contact page). We'll work with you to make sure you get the best price and service for your specific needs.</dd>
 						<dt>I push a lot of traffic. Can your CDN still support my needs?</dt>
-						<dd>We overprovision hardware, we use half of our bandwidth capacity and we constantly upgrade our network to ensure we always have more than enough breathing room for unexpected traffic spikes. That’s why most of our customers come from the 800 pound gorillas in the industry — and we’re ready for more.</dd>
+						<dd>We overprovision hardware, we use half of our bandwidth capacity and we constantly upgrade our network to ensure we always have more than enough breathing room for unexpected traffic spikes. That's why most of our customers come from the 800 pound gorillas in the industry — and we're ready for more.</dd>
 					</dl>
 				</div>
 			</div>
@@ -417,7 +417,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we’ll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you’ll have access to priority support. We’re sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
@@ -460,13 +460,13 @@
 						</div>
 					</div>
 					<div class="col">
-						<h3>If we’re a fit, you’ll enjoy:</h3>
+						<h3>If we're a fit, you'll enjoy:</h3>
 						<ul class="simple-list">
 							<li>Competitive global rates</li>
 							<li>Fast network, fast provisioning</li>
 							<li>Easy to use, but powerful, control panel and API</li>
 							<li>39ms average response times, according to Cedexis</li>
-							<li>24/7/365 support, even on holidays (yes, even that holiday you’re thinking about now)</li>
+							<li>24/7/365 support, even on holidays (yes, even that holiday you're thinking about now)</li>
 						</ul>
 					</div>
 				</div>
